--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "i": "^0.3.7",
+    "lodash.get": "^4.4.2",
+    "npm": "^10.3.0",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-paper": "^5.1.4",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-webview": "^13.6.4",
+    "ios_build": "npx  react-native run-ios --configuration=release",
+    "pod_install_m1": "cd ios && arch -x86_64 pod install",
+    "build:ios": "npx react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'",
+    "ios:pre": "rm -rf ./ios/Pods && rm -rf ./ios/Podfile.lock && rm -rf ./ios/BCAE2.xcworkspace && rm -rf ~/Library/Developer/Xcode/DerivedData/* && npm run pod_install_m1 && npm run ios:img-fix && npm run build:ios && cd ./ios/  &&  cd ../   && npm run ios",
+    "ios:pre:prod": "rm -rf ./ios/Pods && rm -rf ./ios/Podfile.lock && rm -rf ./ios/BCAE2.xcworkspace && rm -rf ~/Library/Developer/Xcode/DerivedData/* && npm run pod_install_m1 && npm run ios:img-fix && npm run build:ios && cd ./ios/ && xcrun agvtool next-version -all &&  cd ../   && npm run ios"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
